--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "cd client && npm run build",
-    "start" : "node server",
+    "build": "cd client && npm run build",
+    "start": "node server",
     "server": "nodemon server.js",
-    "client" : "cd client && npm start",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "client": "cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.0"
   }
